2024-11-30 working on trajectory heatflux loads
2024-12-01 working on trajectory heatflux loads
2024-12-02 adding default material library
2024-12-03 working on trajectory
2024-12-04 working on trajectory
2024-12-05 working on trajectory and speeding up the gui update progress.
2024-12-06 working on trajectory and speeding up the gui update progress.
2024-12-07 updating highlight and draw for trajectory
2024-12-07 start implementing more material keywords
2024-12-08 working on new materials gui cards
2024-12-09 working on trajectory bugs, amplidudes core needs a search speed up
2024-12-09 working on trajectory bugs, amplidudes core speed up for trajectory preparation
2024-12-12 fixing history bug on windows need to wait for new dev release
2024-12-13 working on physical constants, damping, film, radiation
2024-12-14 writing check list. try to fix history bug on windows
2024-12-14 working on core and commands for steps dynamic, modal dynamic, steady state dynamics, complex frequency
2024-12-16 working on damping and physical constants gui
2024-12-17 working on damping and physical constants gui
2024-12-17 working on gui for steps dynamic, modal dynamic, steady state dynamics, complex frequency
2024-12-17 loads film and radiation gui
2024-12-18 adding load type and radius vs magnitude to trajectory
2024-12-19 working on trajectory, adding new python interface methods to query trajectory data
2024-12-19 finished heatflux trajectory
2024-12-19 test and creating examples
2024-12-19 tube impact example
2024-12-19 working on examples
2024-12-20 updating readme and examples
2024-12-20 implementing reading and linking of step and increment data from .dat
######### ------  Release 2024.12

2025-01-04 changing cubit version to 2025.1, sending silent commands needs to be updated, windows history bug is now fixed
2025-01-05 working on implementing surface traction load
2025-01-09 working on implementing surface traction load
2025-01-09 working on surface traction load