@@ -82,6 +82,7 @@ bool ccxConstraintRigidBodyCreateCommand::execute(CubitCommandData &data)
   std::string output;
 
   std::vector<std::string> options;
+  std::vector<double> options2;
   int ref_vertex_value;
   int rot_vertex_value;
   std::string ref_vertex;
@@ -168,7 +169,7 @@ bool ccxConstraintRigidBodyCreateCommand::execute(CubitCommandData &data)
     options.push_back(ref_vertex);
     options.push_back(rot_vertex);
 
-    if (!ccx_iface.create_constraint("RIGIDBODY",options))
+    if (!ccx_iface.create_constraint("RIGIDBODY",options,options2))
     {
       output = "Failed with Block ID " + std::to_string(block_ids[i]) + "!\n";
       PRINT_ERROR(output.c_str());
