@@ -95,8 +95,8 @@ public:
   bool create_section(std::string section_type,int block_id, int material_id, std::vector<std::string> options); // adds a new section
   bool modify_section(std::string section_type,int section_id, std::vector<std::string> options, std::vector<int> options_marker); // modify a section  
   bool delete_section(int section_id); // delete section
-  bool create_constraint(std::string constraint_type, std::vector<std::string> options); // adds a new constraint
-  bool modify_constraint(std::string constraint_type,int constraint_id, std::vector<std::string> options, std::vector<int> options_marker); // modify a constraint  
+  bool create_constraint(std::string constraint_type, std::vector<std::string> options, std::vector<double> options2); // adds a new constraint
+  bool modify_constraint(std::string constraint_type,int constraint_id, std::vector<std::string> options, std::vector<int> options_marker, std::vector<double> options2); // modify a constraint  
   bool delete_constraint(int constraint_id); // delete constraint
   bool create_constraint_tie_from_cubitcontactpair(std::string name, std::string position_tolerance); // create constraint tie from cubit contact pairs
   bool create_surfaceinteraction(std::string surfacebehavior_type, std::vector<std::string> options, std::vector<std::vector<std::string>> options2); // adds a new surfaceinteraction
